SSCS-10053 Added git and pact  property config in gradle